--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>br.edu.ifes.leds.ledscode</groupId>
     <artifactId>LEDSCodeBaseTransformador</artifactId>
     <version>0.0.1</version>
-
-
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.12.6</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
